--- a/examples/single-file/style.css
+++ b/examples/single-file/style.css
@@ -3,20 +3,20 @@ body {
 	font-size: 13px;
 }
 
-/*@atf someTable.css*/
+/*@telecept someTable.css*/
 .someTable {
 	font-size: 16px;
 }
-/*@end-atf*/
+/*@end-telecept*/
 
-/*@atf header.css*/
+/*@telecept header.css*/
 .header {
 	background: green;
 }
-/*@end-atf*/
+/*@end-telecept*/
 
-/*@atf someTable.css*/
+/*@telecept someTable.css*/
 .someTable tr {
 	border-style: none;
 }
-/*@end-atf*/
+/*@end-telecept*/
